feat: update db connection and adjust docker compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,41 @@
-version: "3.7"
-
+version: "3"
 services: 
-  database_tsapp:
-    image: postgres
-    container_name: database_tsapp
-    restart: always
-    networks:
-      - public
-    ports: 
-      - 5432:5432
-    environment:
-      - POSTGRES_USER=tsapp 
-      - POSTGRES_PASSWORD=tsapp
-      - POSTGRES_DB=tsapp
-    volumes:
-      - pgdata:/data/postgres
-  app:
+  tsapp:
+    container_name: tsapp
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: tsapp
+    links: 
+      - database_tsapp
+    depends_on:
+      - database_tsapp
     networks:
       - public
     ports:
       - 3333:3333
+    restart: always
     volumes:
       - .:/usr/app
+  database_tsapp:
+    container_name: database_tsapp
+    image: postgres
+    restart: always
+    tty: true
+    volumes:
+      - pgdata:/data/postgres
+    environment:
+      - POSTGRES_USER=tsapp 
+      - POSTGRES_PASSWORD=tsapp
+      - POSTGRES_DB=tsapp
+    networks:
+      - public
+    ports: 
+      - 5432:5432
+
+networks:
+  public: 
+    driver: bridge
 
 volumes:
   pgdata:
     driver: local
-
-networks:
-  public: 
-    driver: host
